--- a/examples/zsh-syntax-highlighting.zsh.adoc
+++ b/examples/zsh-syntax-highlighting.zsh.adoc
@@ -21,9 +21,9 @@ FUNCTIONS
  _zsh_highlight_call_widget
  _zsh_highlight_cursor_moved
  _zsh_highlight_load_highlighters
- _zsh_highlight_preexec_hook (preexec hook)
 AUTOLOAD add-zsh-hook
 AUTOLOAD is-at-least
+PREEXEC HOOK _zsh_highlight_preexec_hook
 
 DETAILS
 -------
