--- a/test/real-zsyh/real-zsyh.zsh.adoc
+++ b/test/real-zsyh/real-zsyh.zsh.adoc
@@ -21,9 +21,9 @@ FUNCTIONS
  _zsh_highlight_call_widget
  _zsh_highlight_cursor_moved
  _zsh_highlight_load_highlighters
- _zsh_highlight_preexec_hook
 AUTOLOAD add-zsh-hook
 AUTOLOAD is-at-least
+PREEXEC-HOOK _zsh_highlight_preexec_hook
 
 DETAILS
 -------
@@ -177,7 +177,7 @@ ____
  # Reset scratch variables when commandline is done.
 ____
 
-Has 2 line(s). Doesn't call other functions.
+Has 2 line(s). *Is a preexec hook*. Doesn't call other functions.
 
 Not called by script or any function, may be a hook or Zle widget, etc.
 
