--- a/test/nested/nested.zsh.adoc
+++ b/test/nested/nested.zsh.adoc
@@ -27,7 +27,7 @@ DETAILS
 Script Body
 ~~~~~~~~~~~
 
-Has 6 line(s). No functions are called (may attach to Zle or do hooks, etc.).
+Has 6 line(s). No functions are called (may set up e.g. a hook, a Zle widget bound to a key, etc.).
 
 dummy
 ~~~~~
@@ -61,7 +61,7 @@ Has 1 line(s). Calls functions:
  `-- test6
      `-- dummy
 
-Not called by script or any function, may be a hook or Zle widget, etc.
+Not called by script or any function (may be e.g. a hook, a Zle widget, etc.).
 
 test2
 ~~~~~
