--- a/test/cross-calls/cross-calls2.zsh.adoc
+++ b/test/cross-calls/cross-calls2.zsh.adoc
@@ -1,26 +1,21 @@
-cross-calls2.zsh(1)
-===================
-:compat-mode!:
+= cross-calls2.zsh(1)
 
 NAME
-----
+
 cross-calls2.zsh - a shell script
 
 SYNOPSIS
---------
+
 Documentation automatically generated with `zshelldoc'
 
-FUNCTIONS
----------
+== FUNCTIONS
 
  myfun1
  myfun3
 
-DETAILS
--------
+=== DETAILS
 
-Script Body
-~~~~~~~~~~~
+==== Script Body
 
 Has 4 line(s). Calls functions:
 
@@ -28,8 +23,7 @@ Has 4 line(s). Calls functions:
  |-- cross-calls1.zsh/myfun2
  `-- myfun1
 
-myfun1
-~~~~~~
+==== myfun1
 
 Has 1 line(s). Doesn't call other functions.
 
@@ -37,8 +31,7 @@ Called by:
 
  Script-Body
 
-myfun3
-~~~~~~
+==== myfun3
 
 Has 1 line(s). Doesn't call other functions.
 
